# murmur

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CURRENT_STATE.md  LEARNINGS.md  README.md  murmur_platform_vision.docx  murmur_v0_mvp.docx  pyproject.toml
bakeoff/: AUTONOMOUS_SESSION_LOG.md  DECISION_MEMO.md  PHASE2_DESIGN_SUMMARY.md  PHASE_1_FROZEN_SIGNATURES.md  PHASE_2_HARD_NEGATIVES_REPORT.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PREDICTIONS.md  README.md  REBUILD_CORE.md  SANDBOX_CONTRACT.md  SCOPE.md  __init__.py  gen_only.py  generate_sandbox_v2.py  phase2_harness.py  physics_behavioral_read.py  physics_behavioral_read_fast.py  quick_test_v2.py  sandbox_v2_demo.py  sandbox_v2_full.py  sandbox_v2_quick.py  test_phase2_single_seed.py
config/: known_initiators.json  settings.py
docs/: murmur_physics_falsification_plan.md  mvp_strategy.md  mvp_strategy_phase_b.md  phase3_attack_injection_plan.md  post_mvp_roadmap.md
scripts/: attack_orchestrator.py  sandbox-status.sh  setup-sandbox.sh  teardown-sandbox.sh
sql/: schema.sql
src/: cli.py  schema.py
tests/: conftest.py  test_ablation.py  test_api.py  test_attack_generator.py  test_baseline_robustness.py  test_benchmark.py  test_cli.py  test_closure.py  test_closure_discovery.py  test_cloudrun_parser.py  test_correlate.py  test_dedup.py  test_fetch.py  test_fusion.py  test_fusion_closure.py  test_graph.py  test_invariants.py  test_large_scale.py  test_multi_parser.py  test_novelty.py  test_parser.py  test_patterns.py  test_physics.py  test_policy.py  test_provenance_ingest.py  (+7 more)
(+150 files in other folders)
