[project]
name = "murmur"
version = "0.1.0"
description = "Trajectory Risk Engine — physics-informed security detection for GCP audit logs"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "duckdb>=1.0",
    "google-cloud-storage>=2.14",
    "numpy>=1.26",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
murmur = "src.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S"]
ignore = ["S101", "S105"]  # S101: allow assert in tests, S105: false positives on enum values like "SECRET"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.11",
    "bandit>=1.8",
]
